# whisper-rs-example

./: .gitignore  Cargo.toml  Justfile  README.md  text.txt
.cursor/rules/: rust.mdc
src/: main.rs
