[package]
name = "whisper-clipper"
version = "0.1.0"
edition = "2021"

[dependencies]
whisper-rs = { version = "0.14.2" }
clap = { version = "4.5.3", features = ["derive"] }
symphonia = { version = "0.5.3", features = ["all"] }
anyhow = "1.0.81"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.14.2", features = ["metal"] }
